--- a/index.html
+++ b/index.html
@@ -1,325 +1,177 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
+    <title>美味的食物</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Super Dictionary</title>
-    <link rel="stylesheet" href="lib/bootstrap-4.0.0-dist/css/bootstrap.min.css">
-    <style>
-        .logo {
-            width: 60%;
-            height: 500px;
-            margin: auto;
-        }
-        body {
-            color: #333;
-            line-height: 1.8;
-            letter-spacing: 0.08rem;
-            font-family: open sans, helvetica neue, helvetica, arial, sans-serif
-        }
-        .name {
-            text-align: center;
-            font-size: 66px;
-            text-shadow: 3px 5px grey, 1px 1px #333;
-        }
-
-        .img {
-            width: 48%;
-            height: 53%;
-            margin: auto;
-            margin-top: 38px;
-        }
-
-        .img img {
-            width: 100%;
-            height: 100%;
-        }
-
-        .search {
-            width: 60%;
-            height: 100px;
-            margin: auto;
-        }
-
-        .noExtension {
-            width: 60%;
-            height: 100px;
-            margin: auto;
-            font-size: 23px;
-        }
-
-        #search_value {
-            width: 80%;
-            height: 50px;
-            box-shadow: 3px 5px grey, 1px 1px #333;
-        }
-
-        .search button {
-            width: 18%;
-            height: 50px;
-            margin-left: 6px;
-            box-shadow: 3px 5px grey, 1px 1px #333;
-        }
-
-        @keyframes rotate {
-            0% { transform:rotateY(0deg);}
-            25% { transform:rotateY(180deg);}
-            50% { transform:rotateY(0deg);}
-            75% { transform:rotateY(180deg);}
-            100% { transform:rotateY(0deg);}
-        }
-
-        .logo_rotate {
-            /*
-            animation: rotate 10s infinite;
-            animation-fill-mode: forwards;
-            animation-timing-function: linear;
-                */
-            /*  当动画结束时，让<div>元素保留上一个关键帧的样式值 */
-        }
-
-        .result_success {
-            width: 60%;
-            margin: auto;
-        }
-
-        .result_faile{
-            width: 60%;
-            margin: auto;
-        }
-
-        .add_banner{
-            width: 60%;
-            margin: auto;
-        }
-
-        .add_banner input{
-            width: 80%;
-            height: 50px;
-            box-shadow: 3px 5px grey, 1px 1px #333;
-        }
-
-        .add_banner button{
-            width: 18%;
-            height: 50px;
-            margin-left: 6px;
-            box-shadow: 3px 5px grey, 1px 1px #333;
-        }
-
-        #search_banner{
-            font-size: 40px;
-            border-bottom: 1px solid black;
-        }
-
-        p{
-            text-indent:2em;
-            font-size: 20px;
-        }
-
-        .hide{
-            display: none;
-        }
-
-        .contenner{
-            background: url("img/bg.png");
-            height: 900px;
-        }
-
-        .author{
-            text-align: right;
-        }
-        .author p{
-            display: inline-block;
-            font-size: 14px;
-        }
-    </style>
 </head>
 
 <body>
-<div class="contenner">
-    <div class="logo">
-        <div class="name">SUPER DICTIONARY</div>
-        <div class="img logo_rotate">
-            <img src="img/logo.png" alt="">
+
+<script type="text/javascript" src="./dist/nebulas.js"></script>
+
+<script type="text/javascript" src="./dist/nebPay.js"></script>
+<script type="text/javascript" src="./jquery-3.3.1.min.js"></script>
+<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
+
+
+<div class="container">
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <div style="text-align: center">
+                <h1>美味的食物</h1>
+            </div>
+
+            <div class="container-fluid">
+                <div class="row-fluid">
+                    <div class="span12">
+                        <span class="label">分隔符</span>
+                        <div class="list-group">
+                            <a class="list-group-item active">查询美味的食物</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="input-group col-md-3" style="margin-top:20px;margin-left:20px">
+                <input type="text" class="form-control" placeholder="请输入食物名称" id=search_title />
+                <span class="input-group-btn">
+                        <button class="btn btn-info btn-search" id=search>查找</button>
+
+                    </span>
+            </div>
+
+
+
         </div>
-    </div>
-    <div class="noExtension hide" id="noExtension">
-        NOTE: Please install <a target="_blank" href="https://github.com/ChengOrangeJu/WebExtensionWallet">WebExtensionWallet</a>  to use SUPER DICTIONARY
-    </div>
-    <div class="search">
-        <input id="search_value" type="text">
-        <button id=search>search</button>
-    </div>
-
-    <div class="result_success hide">
-        <div id=search_banner></div>
-        <p id=search_result> wait for content </p>
-        <div class="author">
-            <i><p> Author:</p> <p id=search_result_author> dasdajkajksdhjasdkjahdkjad</p></i>
+        <div class="row clearfix">
+            <div class="col-md-12 column">
+            </div>
         </div>
-    </div>
 
-    <div class="result_faile hide">
-        Failed to find related information. Do you want to <button id="add">add</button> infromation for "<i id="result_faile_add">asd</i>"?
-    </div>
+        <div style="text-align: center">
+            <h1 id=title></h1>
+        </div>
 
-    <div class="add_banner hide">
-        <input type="text" id="add_value" placeholder="input contents for your keyword">
-        <button id="push">submit</button>
+        <div id=content style="margin-left:20px"></div>
+
+        <div id=author style="text-align: right"></div>
+
+
+
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span12">
+                    <span class="label">分隔符</span>
+                    <div class="list-group">
+                        <a class="list-group-item active">立即发布</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="input-group" style="margin-left:20px">
+            <span class="input-group-addon">标题</span>
+            <input type="text" class="form-control" placeholder="输入标题" id=input_title>
+        </div>
+        <div class="input-group" style="margin-top:20px ;margin-left:20px">
+            <span class="input-group-addon">正文</span>
+            <input type="text" class="form-control" placeholder="输入正文" id=input_content>
+        </div>
+        <div  style="text-align: right;margin-top:20px ">
+            <button class="btn btn-info" id=post>提交</button>
+        </div>
+
+
     </div>
 </div>
-<script src=lib/jquery-3.3.1.min.js></script>
-<script src=lib/nebPay.js></script>
-<script src=lib/bootstrap-4.0.0-dist/js/bootstrap.min.js></script>
-<script src=lib/nebulas.js></script>
+</body>
+
+
+
+
+
+
+
 <script>
-
     "use strict";
+    var dappContactAddress = "n1suqfYdC1xMGNSHNW3tgDa3yNmKYKgjBJy";
+    var nebulas = require("nebulas"), Account = Account, neb = new nebulas.Neb();
+    neb.setRequest(new nebulas.HttpRequest("https://mainnet.nebulas.io"))
 
-
-    // $("#search_value").attr("disabled",true)
-    // $("#search").attr("disabled",true)
-    // //to check if the extension is installed
-    // //if the extension is installed, var "webExtensionWallet" will be injected in to web page
-    // if(typeof(webExtensionWallet) === "undefined"){
-    //     //alert ("Extension wallet is not installed, please install it first.")
-    //     $("#noExtension").removeClass("hide")
-    // }else{
-    //     $("#search_value").attr("disabled",false)
-    //     $("#search").attr("disabled",false)
-    // }
-
-    var dappAddress = "n1oXdmwuo5jJRExnZR5rbceMEyzRsPeALgm";
-
-    var nebulas = require("nebulas"),
-        Account = nebulas.Account,
-        neb = new nebulas.Neb();
-    neb.setRequest(new nebulas.HttpRequest("https://testnet.nebulas.io"));
-
-    // 搜索功能: 查找Super-Dictionary 中有没有该词条
-    $("#search").click(function(){
-        // $("#search_value").val() 搜索框内的值
-
-        var from = Account.NewAccount().getAddressString();
-
-        var value = "0";
-        var nonce = "0"
-        var gas_price = "1000000"
-        var gas_limit = "2000000"
-        var callFunction = "get";
-        var callArgs = "[\"" + $("#search_value").val() + "\"]"; //in the form of ["args"]
-        var contract = {
-            "function": callFunction,
-            "args": callArgs
-        }
-
-        neb.api.call(from,dappAddress,value,nonce,gas_price,gas_limit,contract).then(function (resp) {
-            cbSearch(resp)
-        }).catch(function (err) {
-            //cbSearch(err)
-            console.log("error:" + err.message)
-        })
-
-    })
-
-    //return of search,
-    function cbSearch(resp) {
-        var result = resp.result    ////resp is an object, resp.result is a JSON string
-        console.log("return of rpc call: " + JSON.stringify(result))
-
-        if (result === 'null'){
-            $(".add_banner").addClass("hide");
-            $(".result_success").addClass("hide");
-
-            $("#result_faile_add").text($("#search_value").val())
-
-            $(".result_faile").removeClass("hide");
-        } else{
-            //if result is not null, then it should be "return value" or "error message"
-            try{
-                result = JSON.parse(result)
-            }catch (err){
-                //result is the error message
-            }
-
-            if (!!result.key){      //"return value"
-                $(".add_banner").addClass("hide");
-                $(".result_faile").addClass("hide");
-
-                $("#search_banner").text($("#search_value").val())
-                $("#search_result").text(result.value)
-                $("#search_result_author").text(result.author)
-
-                $(".result_success").removeClass("hide");
-            } else {        //"error message"
-                $(".add_banner").addClass("hide");
-                $(".result_faile").addClass("hide");
-
-                $("#search_banner").text($("#search_value").val())
-                $("#search_result").text(result)
-                $("#search_result_author").text("")
-
-                $(".result_success").removeClass("hide");
-            }
-
-        }
-
-    }
-
-    // 添加信息功能: 像super-dictionary 中添加词条
-    $("#add").click(function() {
-        $(".result_faile").addClass("hide");
-        $(".add_banner").removeClass("hide");
-
-        $("#add_value").val("")
-    })
 
     var NebPay = require("nebpay");     //https://github.com/nebulasio/nebPay
     var nebPay = new NebPay();
     var serialNumber
 
-    $("#push").click(function() {
+    $("#search").click(function () {
+        if (!$("#search_title").val()) {
+            alter('搜索标题不能为空');
+            return;
+        }
 
-        var to = dappAddress;
+        $('#content').text("");
+        var from = dappContactAddress
         var value = "0";
-        var callFunction = "save"
-        var callArgs = "[\"" + $("#search_value").val() + "\",\"" + $("#add_value").val() + "\"]"
+        var nonce = "0"
+        var gas_price = "1000000"
+        var gas_limit = "2000000"
+        var callFunction = "get";
+        var callArgs = "[\"" + $("#search_title").val() + "\"]";
+        console.log(callArgs);
+        var contract = {
+            "function": callFunction,
+            "args": callArgs
+        }
+
+
+        neb.api.call(from, dappContactAddress, value, nonce, gas_price, gas_limit, contract).then(function (resp) {
+            var result = resp.result;
+
+            if (result === 'null') {
+                $('#content').text("没有发现该食物，你可以立即添加！");
+                $('#title').text("");
+                $('#author').text("");
+                return;
+            }
+            console.log(result);
+            result = JSON.parse(result);
+            $("#title").text(result.name);
+            $('#content').text("正文:  " + result.emblems);
+            $('#author').text("作者：" + result.author);
+
+        }).catch(function (err) {
+            console.log("error :" + err.message);
+
+        })
+
+    })
+
+
+
+    $('#post').click(function () {
+        if (!$("#input_title").val() || !$("#input_content").val()) {
+            alert('标题或者文本不能为空');
+            return;
+        }
+        var to = dappContactAddress;
+        var value = "0";
+        var callFunction = "save";
+        var callArgs = "[\"" + $("#input_title").val() + "\",\"" + $("#input_content").val() + "\"]";
+        console.log(callArgs);
 
         serialNumber = nebPay.call(to, value, callFunction, callArgs, {    //使用nebpay的call接口去调用合约,
-            listener: cbPush        //设置listener, 处理交易返回信息
+            listener: function (resp) {
+                console.log("thecallback is " + resp)
+            }
         });
 
-        intervalQuery = setInterval(function () {
-            funcIntervalQuery();
-        }, 5000);
-    });
-
-    var intervalQuery
-
-    function funcIntervalQuery() {
-        nebPay.queryPayInfo(serialNumber)   //search transaction result from server (result upload to server by app)
-            .then(function (resp) {
-                console.log("tx result: " + resp)   //resp is a JSON string
-                var respObject = JSON.parse(resp)
-                if(respObject.code === 0){
-                    alert(`set ${$("#search_value").val()} succeed!`)
-                    clearInterval(intervalQuery)
-                }
-            })
-            .catch(function (err) {
-                console.log(err);
-            });
-    }
-
-    function cbPush(resp) {
-        console.log("response of push: " + JSON.stringify(resp))
-    }
-
+    })
 
 </script>
-</body>
 
 </html>
